<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">
    <View
        android:id="@+id/v_line"
        style="@style/line_color"
        android:layout_marginLeft="@dimen/common_margin"
        android:layout_marginRight="@dimen/common_margin"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:layout_marginLeft="@dimen/common_margin"
        android:layout_marginRight="@dimen/common_margin">
        <ImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:src="@mipmap/syicon"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:layout_marginLeft="@dimen/common_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_game_name"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_title"
                android:layout_marginBottom="3dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="30dp"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/test_game_type1"
                    android:background="@color/class_color1"
                    android:textSize="@dimen/text_hint"
                    android:textColor="@color/white"
                    android:layout_marginRight="3dp"

                    />
                <TextView
                    android:layout_width="30dp"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/test_game_type2"
                    android:background="@color/class_color2"
                    android:textSize="@dimen/text_hint"
                    android:textColor="@color/white"
                    android:layout_marginRight="3dp"
                    />
                <TextView
                    android:layout_width="30dp"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/test_game_type3"
                    android:background="@color/class_color3"
                    android:textSize="@dimen/text_hint"
                    android:textColor="@color/white"
                    android:layout_marginRight="3dp"
                    />
                <TextView
                    android:layout_width="30dp"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/test_game_type4"
                    android:background="@color/class_color4"
                    android:textSize="@dimen/text_hint"
                    android:textColor="@color/white"
                    android:layout_marginRight="3dp"
                    />
                <TextView
                    android:layout_width="30dp"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/test_game_type5"
                    android:background="@color/class_color5"
                    android:textSize="@dimen/text_hint"
                    android:textColor="@color/white"
                    android:layout_marginRight="3dp"
                    />
            </LinearLayout>
            <TextView
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10-31日12:00不删档内测"
                android:textColor="#FFA727"
                android:textSize="@dimen/text_hint"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <include layout="@layout/view_download_btn"/>
            <Button
                android:layout_marginTop="5dp"
                android:layout_width="52dp"
                android:layout_height="25dp"
                android:textColor="@color/white"
                android:background="@mipmap/smlb"
                android:id="@+id/button" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>