<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.etsdk.app.huov7.ui.GameDetailActivity">
    <include layout="@layout/include_comm_title"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@color/white">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@mipmap/gg"
            android:scaleType="centerCrop"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/stban"
                android:scaleType="fitXY"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:layout_alignParentBottom="true"
                />
        </LinearLayout>
        <ImageView
            android:id="@+id/iv_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/stcz"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            />
        <TextView
            android:id="@+id/tv_game_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_game_status"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_hint"
            android:layout_above="@id/iv_pay"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            />
        <LinearLayout
            android:id="@+id/ll_size_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/tv_game_status"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_game_size"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/text_hint"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="5dp"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_game_type1"
                    android:background="@color/yellow"
                    android:textSize="@dimen/text_hint"
                    android:textColor="@color/white"
                    />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/tv_game_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_game_name"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_title"
            android:layout_above="@id/ll_size_type"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            />
        <ImageView
            android:id="@+id/iv_game_img"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/bg_game"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/tv_game_name"
            android:layout_marginBottom="5dp"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="3dp"
        android:background="@color/white">
        <LinearLayout
            android:id="@+id/ll_detail_desc_tab"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_centerVertical="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="简介"
                android:gravity="center"
                android:textColor="@color/selector_tab_text_color"
                android:textSize="@dimen/text_title"
                />
            <TextView
                android:layout_width="55dp"
                android:layout_height="2dp"
                android:background="@drawable/selector_tab_text_color"
                android:layout_marginTop="3dp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_detail_fuli_tab"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="福利"
                android:textColor="@color/selector_tab_text_color"
                android:gravity="center"
                android:textSize="@dimen/text_title"
                />
            <TextView
                android:layout_width="55dp"
                android:layout_height="2dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/selector_tab_text_color"
                />
        </LinearLayout>
    </LinearLayout>
    <View style="@style/line_split_color"/>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <FrameLayout
            android:id="@+id/fl_detail_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </FrameLayout>
    </android.support.v4.widget.NestedScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/bg_blue">
        <ProgressBar
            android:id="@+id/pb_download"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="200dp"
            android:layout_height="38dp"
            android:layout_marginBottom="10dp"
            android:layout_centerInParent="true"
            android:max="100"
            android:progress="0"
            android:progressDrawable="@drawable/detail_progressbar_style" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/bg_blue"
            android:text="下载"
            android:layout_centerInParent="true"
            android:textSize="@dimen/text_content"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_hint"
            android:textColor="@color/white"
            android:text="分享"
            android:drawableTop="@mipmap/sbfen"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            />
    </RelativeLayout>
</LinearLayout>
