<?xml version="1.0" encoding="utf-8"?>
<com.etsdk.app.huov7.view.PullZoomLLView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/iv_zoom"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@mipmap/gg"
        android:scaleType="fitXY"
        />
    <View android:layout_width="match_parent"
        android:layout_height="150dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/rl_title"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="title"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>
    <com.etsdk.app.huov7.view.ScrollLinearLayout
        android:id="@+id/ll_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/ll_headView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:orientation="vertical"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:src="@mipmap/stban"
                        android:scaleType="fitXY"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"/>
                </LinearLayout>
                <ImageView
                    android:id="@+id/iv_game_img"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/bg_game"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    />
            </RelativeLayout>
            <TextView
                android:id="@+id/tv_game_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_game_name"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_title"
                android:gravity="center"
                android:background="@color/white"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:paddingBottom="3dp"
                />
            <LinearLayout
                android:id="@+id/ll_size_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@color/white"
                android:paddingBottom="3dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_game_size"
                    android:textColor="@color/text_gray"
                    android:textSize="@dimen/text_hint"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="5dp"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test_game_type1"
                        android:background="@color/yellow"
                        android:textSize="@dimen/text_hint"
                        android:textColor="@color/white"
                        />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_game_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_game_status"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/text_hint"
                android:background="@color/white"
                android:gravity="center"
                android:paddingBottom="3dp"
                />
            <ImageView
                android:id="@+id/iv_pay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/stcz"
                android:background="@color/white"
                android:paddingBottom="3dp"
                />
            <LinearLayout
                android:id="@+id/ll_tab"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:orientation="horizontal"
                    android:paddingTop="3dp"
                    android:background="@color/white">
                    <LinearLayout
                        android:id="@+id/ll_detail_desc_tab"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_centerVertical="true">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="简介"
                            android:gravity="center"
                            android:textColor="@color/selector_tab_text_color"
                            android:textSize="@dimen/text_title"
                            />
                        <TextView
                            android:layout_width="55dp"
                            android:layout_height="2dp"
                            android:background="@drawable/selector_tab_text_color"
                            android:layout_marginTop="3dp"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/ll_detail_fuli_tab"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="20dp"
                        android:layout_centerVertical="true"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="福利"
                            android:textColor="@color/selector_tab_text_color"
                            android:gravity="center"
                            android:textSize="@dimen/text_title"
                            />
                        <TextView
                            android:layout_width="55dp"
                            android:layout_height="2dp"
                            android:layout_marginTop="3dp"
                            android:background="@drawable/selector_tab_text_color"
                            />
                    </LinearLayout>
                </LinearLayout>
                <View style="@style/line_split_color"/>
            </LinearLayout>
        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </android.support.v7.widget.RecyclerView>
    </com.etsdk.app.huov7.view.ScrollLinearLayout>
</com.etsdk.app.huov7.view.PullZoomLLView>